Some test code for serial communications, edited SerialPrinter as I forgot C dosen't like strings, is tested works as expected

--- a/MainController/TestCode/serial_out_pins_test/platformio.ini
+++ b/MainController/TestCode/serial_out_pins_test/platformio.ini
@@ -11,4 +11,6 @@
 platform = ststm32
 board = nucleo_f746zg
 framework = mbed
-build_flags = -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
+build_flags = -Wl,--wrap,main
+              -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
+              -D PIO_FRAMEWORK_MBED_EVENTS_PRESENT
